tests/purs/failing/CoercibleNominalWrapped.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleNominalWrapped.purs:15:14 - 15:20 (line 15, column 14 - line 15, column 20)

  No type class instance was found for
  [33m                                         [0m
  [33m  Prim.Coerce.Coercible (Wrap a0 b1)     [0m
  [33m                        (Wrap (Id a0) b1)[0m
  [33m                                         [0m

while checking that type [33mforall a b. Coercible a b => a -> b[0m
  is at least as general as type [33mWrap a0 b1 -> Wrap (Id a0) b1[0m
while checking that expression [33mcoerce[0m
  has type [33mWrap a0 b1 -> Wrap (Id a0) b1[0m
in value declaration [33mwrapToWrap[0m

where [33mb1[0m is a rigid type variable
        bound at (line 15, column 14 - line 15, column 20)
      [33ma0[0m is a rigid type variable
        bound at (line 15, column 14 - line 15, column 20)

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

